--- a/package.json
+++ b/package.json
@@ -10,9 +10,8 @@
     "html-webpack-plugin": "^5.5.0",
     "node-fetch": "^2.6.8",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
-    "react-router": "^6.7.0",
+    "react-router-dom": "^5.3.1",
     "react-scripts": "5.0.1",
     "redux": "^4.2.0",
     "redux-devtools-extension": "^2.13.9",
