--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "rick-and-morty-web-page",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://marlon-rivera.github.io/rick-and-morty-project",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -20,6 +21,8 @@
     "webpack-dev-server": "^4.11.1"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -44,6 +47,7 @@
     ]
   },
   "devDependencies": {
+    "gh-pages": "^5.0.0",
     "webpack-cli": "^5.0.1"
   }
 }
