--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "rick-and-morty-web-page",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://marlon-rivera.github.io/rick-and-morty-project",
+  "homepage": "http://marlon-rivera.github.io/rick-and-morty-project",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
