--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "rick-and-morty-web-page",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://rickandmortyinfoserie.netlify.app",
+  "homepage": "http://marlon-rivera.github.io/rick-and-morty-project",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -21,9 +21,11 @@
     "webpack-dev-server": "^4.11.1"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
-    "test": "react-scripts test",
     "build": "react-scripts build",
+    "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
